RESOLVED FIXED135582
Selection services menu dropdown is in the wrong place when selecting some text on Yelp
https://bugs.webkit.org/show_bug.cgi?id=135582
Summary Selection services menu dropdown is in the wrong place when selecting some te...
Tim Horton
Reported 2014-08-04 17:10:47 PDT
Attachments
patch (5.02 KB, patch)
2014-08-04 17:11 PDT, Tim Horton
simon.fraser: review+
crash fix (2.80 KB, patch)
2014-08-04 18:36 PDT, Tim Horton
enrica: review+
Tim Horton
Comment 1 2014-08-04 17:11:59 PDT
Simon Fraser (smfr)
Comment 2 2014-08-04 17:26:49 PDT
Comment on attachment 235993 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=235993&action=review > Source/WebCore/editing/SelectionRectGatherer.cpp:56 > + absoluteGapRects.uniteLeft(LayoutRect(repaintContainer->localToAbsoluteQuad(FloatQuad(rects.left())).boundingBox())); > + absoluteGapRects.uniteCenter(LayoutRect(repaintContainer->localToAbsoluteQuad(FloatQuad(rects.center())).boundingBox())); > + absoluteGapRects.uniteRight(LayoutRect(repaintContainer->localToAbsoluteQuad(FloatQuad(rects.right())).boundingBox())); This is all gross and horrible and services should not be so tied to selection code.
Tim Horton
Comment 3 2014-08-04 17:28:53 PDT
(In reply to comment #2) > (From update of attachment 235993 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=235993&action=review > > > Source/WebCore/editing/SelectionRectGatherer.cpp:56 > > + absoluteGapRects.uniteLeft(LayoutRect(repaintContainer->localToAbsoluteQuad(FloatQuad(rects.left())).boundingBox())); > > + absoluteGapRects.uniteCenter(LayoutRect(repaintContainer->localToAbsoluteQuad(FloatQuad(rects.center())).boundingBox())); > > + absoluteGapRects.uniteRight(LayoutRect(repaintContainer->localToAbsoluteQuad(FloatQuad(rects.right())).boundingBox())); > > This is all gross and horrible and services should not be so tied to selection code. +1 Thank you. http://trac.webkit.org/changeset/172013
Tim Horton
Comment 4 2014-08-04 18:36:13 PDT
Created attachment 235997 [details] crash fix
Enrica Casucci
Comment 5 2014-08-04 18:38:19 PDT
Comment on attachment 235997 [details] crash fix Good boy!
Tim Horton
Comment 6 2014-08-04 18:41:10 PDT
Note You need to log in before you can comment on or make changes to this bug.