Selection services menu dropdown is in the wrong place when selecting some text on Yelp https://bugs.webkit.org/show_bug.cgi?id=135582 <rdar://problem/17837636>

Reviewed by Simon Fraser.

* editing/SelectionRectGatherer.cpp:
(WebCore::SelectionRectGatherer::addRect):
(WebCore::SelectionRectGatherer::addGapRects):
(WebCore::SelectionRectGatherer::addRects): Deleted.
Rename addRects to addGapRects for clarity.
Map rects and gapRects to absolute RenderView coordinates so that
they are in a form WebKit2 can use. Previously they were sometimes
relative to a different repaint container, but that information was
lost when moving through SelectionRectGatherer.

Ideally we would keep selection rects as full quads instead of rects
for more of their life, but that problem is much deeper than just SelectionRectGatherer.

* editing/SelectionRectGatherer.h:
Add a comment clarifying the coordinate space of the stored selection rects.

* rendering/RenderView.cpp:
(WebCore::RenderView::applySubtreeSelection):
Rename addRects to addGapRects for clarity.


Canonical link: https://commits.webkit.org/153452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172013 268f45cc-cd09-0410-ab3c-d52691b4dbfc