Source/WebCore/rendering/RenderView.cpp
@@ -1013,7 +1013,7 @@ void RenderView::applySubtreeSelection(SelectionSubtreeRoot& root, RenderObject*
 
 #if ENABLE(SERVICE_CONTROLS)
             for (auto& rect : selectionInfo->collectedSelectionRects())
-                m_selectionRectGatherer.addRect(rect);
+                m_selectionRectGatherer.addRect(selectionInfo->repaintContainer(), rect);
 #endif
 
             newSelectedObjects.set(o, WTF::move(selectionInfo));
@@ -1027,7 +1027,7 @@ void RenderView::applySubtreeSelection(SelectionSubtreeRoot& root, RenderObject*
                 cb = cb->containingBlock();
 
 #if ENABLE(SERVICE_CONTROLS)
-                m_selectionRectGatherer.addRects(blockInfo->rects());
+                m_selectionRectGatherer.addGapRects(blockInfo->repaintContainer(), blockInfo->rects());
 #endif
             }
         }
